--- a/src/assets/styles/home.scss
+++ b/src/assets/styles/home.scss
@@ -44,6 +44,7 @@
     width: 20%;
     border: none;
     font-size: 20px;
+    color: black;
     &:hover {
       -webkit-box-shadow: 0px 0px 10px 0px rgba(255, 255, 255, 0.75);
       -moz-box-shadow: 0px 0px 10px 0px rgba(255, 255, 255, 0.75);
