--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -3,3 +3,15 @@
   margin: 5% 0;
   text-transform: uppercase;
 }
+
+.center-text-to-div {
+  h1 {
+    letter-spacing: 15px;
+  }
+  z-index: 10;
+  letter-spacing: 5px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
